--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,44 @@ body {
     border-radius: 10px; /* Add border-radius */
   }
 
+  .splash-container {
+    background-image: url('../landing.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    /* To make sure the content inside the body covers the whole viewport height */
+    min-height: 100vh;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    }
+
+    .centered {
+      text-align: center;
+      margin-top: 15rem;
+    }
+
+   
+    .enter-button {
+      display: inline-block;
+      background-color: #4450ae;
+      color: white;
+      font-size: 1.5rem;
+      font-family: 'Ubuntu', sans-serif;
+      padding: 15px 30px;
+      text-decoration: none;
+      border: none;
+      cursor: pointer;
+      border-radius: 5px;
+      transition: 0.3s;
+    }
+
+    .enter-button:hover {
+      background-color: #555;
+    }
+    
+
   .gen-container {
     background-color: #3A1F46;
     border-radius: 10px;
