--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    background-attachment: fixed;
     /* To make sure the content inside the body covers the whole viewport height */
     min-height: 80vh;
     margin: 0;
@@ -93,7 +94,8 @@ body {
     }
 
     .enter-button:hover {
-      background-color: #555;
+      background-color: #5a63c5;
+      
     }
     
 
@@ -139,23 +141,15 @@ body {
     font-family: 'Ubuntu', sans-serif;
     font-size: 1rem;
     margin-right: 2rem;
-    font-weight: bold;
+    font-weight: normal;
+    line-height: 1.6rem;
 
   }
 
-  .section-heading-dark {
-    font-family: 'Ubuntu', sans-serif;
-    text-align: center;
-    font-size: 2rem;
-    margin-top: 10px !important;
-    padding: 0 10px;
-    color:#3A1F46;
-    position: relative;
-    bottom: 2rem;
-  }
 
   .section1 {
-    background-color: #AB6D88;
+    /*background-color: #AB6D88;*/
+    background-image: linear-gradient(to right, #C2939C, #D4A4B3, #C2939C);
     position: relative;
     bottom: 4rem;
   }
@@ -267,3 +261,74 @@ body {
     outline: none;
     border-color: #3A1F46;
   }
+
+  .resources {
+    background-color: #2e8b87;
+    background-image: linear-gradient(rgba(48, 161, 156, 0.5), rgba(48, 161, 156, 0.2)), url('../dark_mosaic.png');
+    position: relative;
+    bottom: 6rem;
+    padding: 20px;
+  }
+
+  .resources::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.8) !important; /* Adjust the last value (0.2) to control the opacity of the overlay */
+    z-index: -1;
+  }
+
+  .resources-blurb {
+    margin: 2rem 5rem;
+    font-family: 'Ubuntu', sans-serif;
+    line-height: 1.6rem;
+    color: white;
+  }
+
+  /* Style the unordered list */
+.resources ul {
+  list-style-type: none; /* Remove default bullets */
+  padding-left: 0; /* Remove default left padding */
+  margin-bottom: 2rem; /* Add space below the list */
+  text-align: center;
+}
+
+/* Style the list items */
+.resources li {
+  margin-bottom: 1rem; /* Add space between items */
+}
+
+/* Style the links */
+.resources a {
+  color: #60c1b3;
+  text-decoration: none; /* Remove default underline */
+  transition: color 0.3s; /* Add a transition for color change */
+}
+
+/* Add hover effect for the links */
+.resources a:hover {
+  color: #7e3d93; /* Use a different color for hover */
+}
+  /*Experiments*/
+  .lighting-effect {
+    position: relative;
+  }
+
+  .lighting-effect::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: inherit;
+    background-image: radial-gradient(circle at center, rgba(255, 255, 255, 0.2) 0%, transparent 70%);
+    pointer-events: none;
+  }
+
+  
+  
+  
