--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
   }
 
   header {
-    background-image: url('../bg.jpg');
+    background-image: url('../bg2.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
