Add content and images to creation guide page

--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,42 @@ body {
     background-color: #8768A6;
     border-radius: 50%;
   }
+
+  ol {
+    list-style-type: none;
+    counter-reset: my-counter;
+  }
+
+  ol li {
+    counter-increment: my-counter;
+  }
+
+  .fableforge-guides ol {
+    counter-reset: item;
+    padding: 0;
+    margin-left: 2rem;
+  }
+  
+  .fableforge-guides ol li {
+    position: relative;
+    margin-left: 3rem;
+    padding-left: 1.5em;
+    font-size: 1.2rem;
+    line-height: 1.5;
+    color: #110226;
+    margin-bottom: 0.5em;
+  }
+  
+  .fableforge-guides ol li::before {
+    content: counter(item) ".";
+    counter-increment: item;
+    position: absolute;
+    left: 0;
+    top: 0;
+    font-weight: bold;
+    color: #755397;
+  }
+  
   
   
 
@@ -259,12 +295,13 @@ body {
     font-family: 'Cinzel Decorative', cursive;
   }
 
-  .introduction-image {
-    max-width: 25%;
+  .introduction-image, .charbg-image {
+    max-width: 100%;
     height: auto;
     display: block;
     margin: 0 auto 2rem auto; 
-    
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
+    transition: box-shadow 0.3s ease-in-out;
   }
 
   .active {
